--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.7",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
