--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "flowbite-react": "^0.4.7",
     "next": "13.4.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.63.5"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
