--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "export": "next export"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
+    "mongodb": "^5.7.0",
     "next": "13.4.5",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.5"
