--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
     "mongodb": "^5.7.0",
