making .env hidden again

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 
 
-API_KEY='mongodb+srv://jakediehl17:r37PiCKsLYQHR8iR@cluster0.fboojzq.mongodb.net/auth?retryWrites=true&w=majority'
+API_KEY='mongodb+srv://jakediehl17:rwMuZqxNjG2bMboB@cluster0.fboojzq.mongodb.net/auth?retryWrites=true&w=majority'
