--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "flowbite": "^1.6.5",
