--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.63.5"
+    "sass": "^1.63.5",
+    "vercel": "^31.0.2"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
