--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.0.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
