--- a/package.json
+++ b/package.json
@@ -14,18 +14,16 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
     "mongodb": "^5.7.0",
-    "next": "13.4.5",
-    "next-auth": "^4.22.1",
+    "next": "^13.5.6",
+    "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.5",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
-    "vercel": "^31.0.2"
+    "swr": "^2.2.4",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
