--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^5.7.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.5",
