--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "export": "next export"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.1.11",
     "@vercel/analytics": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
@@ -23,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.5",
+    "stripe": "^14.5.0",
     "swr": "^2.2.4",
     "vercel": "^32.3.0"
   },
